use the first suite’s title as the document title
see #8

--- a/lib/client/mocha.html
+++ b/lib/client/mocha.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>domify tests</title>
+    <title>mocha tests</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <link rel="stylesheet" href="/mocha.css" />
     <link rel="stylesheet" href="/build.css" />
