prevent IE from going into compatibility mode

--- a/lib/client/mocha.html
+++ b/lib/client/mocha.html
@@ -1,7 +1,9 @@
+<!DOCTYPE html>
 <html>
   <head>
     <title>mocha tests</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="/mocha.css" />
     <link rel="stylesheet" href="/build.css" />
   </head>
