listen for JS errors

--- a/lib/client/mocha.html
+++ b/lib/client/mocha.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <div id="mocha"></div>
+    <script src="/onerror.js"></script>
     <script src="/mocha.js"></script>
     <script src="/mocha-cloud.js"></script>
     <script>
